# active_scheduler

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  compile_commands.json
docs/: class_diagram.md
example/: interrupt.cpp  interrupt.h  messages.h  motor_control_ao.cpp  motor_control_ao.h  motor_control_router.cpp  motor_control_router.h  pedal_position_ao.cpp  pedal_position_ao.h  pedal_position_router.cpp  pedal_position_router.h  uart.h  uart_messages.h  uart_mock.h
example/cmake/: CMakeLists.txt  CMakePresets.json
example/motor_control/: motor_control_adapter.cpp  motor_control_adapter.h  motor_control_ao.h  motor_control_router.cpp  motor_control_task.cpp  motor_control_task.h
example/pedal_position/: pedal_position_adapter.cpp  pedal_position_adapter.h  pedal_position_ao.cpp  pedal_position_router.cpp  pedal_position_router.h  pedal_position_task.cpp  pedal_position_task.h
incl/: active_message.h  active_object.h  active_router.h  active_scheduler.h  active_task.h  interrupt.h  messages.h  scheduler_router.h  tasks.h
incl/active/: active_message.h  active_object.h  active_router.h
scripts/: .gitignore  can_strategy.py  internal.yaml  internal_strategy.py  uart.yaml  uart_strategy.py  validator.py  yaml_generate.py
src/: active_object.cpp  active_router.cpp  active_scheduler.cpp  active_task.cpp  interrupt.cpp  main.cpp  scheduler_router.cpp  tasks.cpp
